--- a/aula1/css/style.css
+++ b/aula1/css/style.css
@@ -25,4 +25,39 @@ header {
 
 */
 
+.container {
+    width: 100%;
+    max-width: 1250px;
+    margin: 0 auto;
+}
 
+header {
+    background-color: #F67841;
+    padding: 20px 0px;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+header ul {
+    list-style: none;
+    display: flex;
+    gap: 40px;
+}
+
+.secaoPrincipal {
+    background-color: #FEE7D6;
+    padding-top: 60px;
+    margin-bottom: 40px;
+}
+
+
+.secaoPrincipal .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
